--- a/contents/header.html
+++ b/contents/header.html
@@ -74,6 +74,7 @@
                                 </li>
                                 <li class="menu-item-simple-parent"><a href="busybox.php"><i class="fa fa-code"></i>BusyBox</a></li>
                                 <li class="menu-item-simple-parent"><a href="dyndns.php"><i class="fa fa-server"></i>DynDNS</a></li>
+                                <li class="menu-item-simple-parent"><a href="bash.php"><i class="fa fa-connectdevelop"></i>Bash Script</a></li>
 	                        </ul>
 	                    </nav>
 	                    <!-- **Nav - End**-->
