CCcam - přidány grafické obrázky s ukázkami - přidán popis souboru ecm.info - přidány stránky pro kompletní html strukturu (chybí jen "cccam-script2.php" - viz CCcam Todo list) - přidáno další info o CCcamInfoPhp v1.02
Obrázky
- provedena komprece obrázků PNG.

--- a/contents/cccam-menu.html
+++ b/contents/cccam-menu.html
@@ -17,8 +17,6 @@
 									<li> <a href="cccam-channelinfo.php">CCcam.channelinfo</a> </li>
 									<li> <a href="cccam-providers.php">CCcam.providers</a> </li>
 									<li> <a href="cccam-prio.php">CCcam.prio</a> </li>
-									<li> <a href="cccam-script.php">CCcam script E1</a> </li>
-									<li> <a href="cccam-script1.php">CCcam script E2</a> </li>
 								</ul>
 							</li>
 							<li> <a class="dt-sc-toggle" href="#">CCcam Start script<span class="fa fa-plus-square"></span> <span class="fa fa-minus-square "></span> </a> 
@@ -32,15 +30,20 @@
 									<li> <a href="cccam-script.php">O Bash scriptech</a> </li>
 									<li> <a href="cccam-script1.php">Script č.1 - Update souborů E2</a> </li>
 									<li> <a href="cccam-script2.php">Script č.2 - Generátor souborů E2</a> </li>
+									<li> <a href="cccam-script3.php">Ostatní Bash scripty</a> </li>
 								</ul>
 							</li>
 							<li> <a href="cccam-telnet.php">Telnet</a> </li>
-							<li> <a href="cccam-log.php">Logování</a> </li>
+							<li> <a class="dt-sc-toggle" href="#">Logování<span class="fa fa-plus-square"></span> <span class="fa fa-minus-square "></span> </a> 
+								<ul style="display: none;" class="dt-sc-toggle-content">
+									<li> <a href="cccam-log.php">Debug CCcamu</a> </li>
+									<li> <a href="cccam-ecm.php">Ecm.info</a> </li>
+								</ul>
+							</li>
 							<li> <a class="dt-sc-toggle" href="#">CCcam nástroje <span class="fa fa-plus-square"></span> <span class="fa fa-minus-square "></span> </a> 
 								<ul style="display: none;" class="dt-sc-toggle-content">
 									<li> <a href="cccam-tools.php">CCcamInfoPHP v1.02</a> </li>
 									<li> <a href="cccam-tools1.php">CCcamInfoPHP v2.57</a> </li>
-									<li> <a href="cccam-tools2.php">XXXX</a> </li>
 								</ul>
 							</li>
 							<li> <a href="cccam-todo.php">CCcam TODO list</a> </li>
