--- a/contents/header.html
+++ b/contents/header.html
@@ -4,7 +4,7 @@
 	                <!-- **Logo - End** -->
 	                <div id="logo">
 	                    <a href="index.php" title="CZSK - Wiki"> <img src="images/logo.png" alt="image"/> </a>
-                        <span>Česká znalostní databáze Emulátorů v8</span>
+                        <span>Česká znalostní databáze Emulátorů v9</span>
 	                </div><!-- **Logo - End** -->
 	                
 	                <div id="menu-container">
@@ -75,6 +75,7 @@
                                 <li class="menu-item-simple-parent"><a href="busybox.php"><i class="fa fa-code"></i>BusyBox</a></li>
                                 <li class="menu-item-simple-parent"><a href="dyndns.php"><i class="fa fa-server"></i>DynDNS</a></li>
                                 <li class="menu-item-simple-parent"><a href="bash.php"><i class="fa fa-connectdevelop"></i>Bash Script</a></li>
+                                <li class="menu-item-simple-parent"><a href="linuxbox.php"><i class="fa fa-server"></i>Linux Box</a></li>
 	                        </ul>
 	                    </nav>
 	                    <!-- **Nav - End**-->
