Wiki - změna ikony v hlavním menu pro emulátory

--- a/contents/header.html
+++ b/contents/header.html
@@ -16,7 +16,7 @@
                             </div>
                             <ul class="menu">
 	                            <li class="menu-item-simple-parent"><a href="index.php"><i class="fa fa-home"></i>Úvod</a></li>
-                                <li class="menu-item-megamenu-parent megamenu-4-columns-group menu-item-depth-0"><a href="side-navigation.html"><i class="fa fa-book"></i>Emulátory</a>
+                                <li class="menu-item-megamenu-parent megamenu-4-columns-group menu-item-depth-0"><a href="side-navigation.html"><i class="fa fa-cube"></i>Emulátory</a>
                                     <div class="megamenu-child-container">
                                         <ul class="sub-menu">
                                             <li class="menu-item-with-widget-area">
@@ -75,7 +75,7 @@
                                 <li class="menu-item-simple-parent"><a href="busybox.php"><i class="fa fa-code"></i>BusyBox</a></li>
                                 <li class="menu-item-simple-parent"><a href="dyndns.php"><i class="fa fa-server"></i>DynDNS</a></li>
                                 <li class="menu-item-simple-parent"><a href="bash.php"><i class="fa fa-connectdevelop"></i>Bash Script</a></li>
-                                <li class="menu-item-simple-parent"><a href="linuxbox.php"><i class="fa fa-server"></i>Linux Box</a></li>
+                                <li class="menu-item-simple-parent"><a href="linuxbox.php"><i class="fa fa-linux"></i>Linux Box</a></li>
 	                        </ul>
 	                    </nav>
 	                    <!-- **Nav - End**-->
