--- a/inc/html_content/header.html
+++ b/inc/html_content/header.html
@@ -4,7 +4,7 @@
 					<!-- **Logo - End** -->
 					<div id="logo">
 						<a href="index.php?page=home-page" title="CZSK - Wiki"> <img src="images/logo.png" alt="image"/> </a>
-						<span>Česká znalostní databáze Emulátorů v10</span>
+						<span>Česká znalostní databáze Emulátorů v11</span>
 					</div><!-- **Logo - End** -->
 					
 					<div id="menu-container">
@@ -28,6 +28,7 @@
 															<div class="textwidget">
 																<ul>
 																	<li><a href="index.php?category=oscam&page=oscam-index">OSCam</a></li>
+																	<li><a href="index.php?category=doscam&page=doscam-index">DOSCam</a></li>
 																	<li><a href="index.php?category=newcs&page=newcs-index">NewCS</a></li>
 																	<li><a href="index.php?category=cccam&page=cccam-index">CCcam</a></li>
 																</ul>
@@ -59,7 +60,7 @@
 								<li class="menu-item-simple-parent"><a href="index.php?category=busybox&page=busybox"><i class="fa fa-code"></i>BusyBox</a></li>
 								<li class="menu-item-simple-parent"><a href="index.php?category=dyndns&page=dyndns"><i class="fa fa-server"></i>DynDNS</a></li>
 								<li class="menu-item-simple-parent"><a href="index.php?category=bash&page=bash"><i class="fa fa-connectdevelop"></i>Bash Script</a></li>
-								<li class="menu-item-simple-parent"><a href="index.php?category=linuxbox&page=linuxbox"><i class="fa fa-linux"></i>Linux Box</a></li>
+								<li class="menu-item-simple-parent"><a href="index.php?category=linuxbox&page=linuxbox-index"><i class="fa fa-linux"></i>Linux Box</a></li>
 							</ul>
 						</nav>
 						<!-- **Nav - End**-->
