--- a/inc/html_content/oscam-menu.html
+++ b/inc/html_content/oscam-menu.html
@@ -2,7 +2,7 @@
 						<h3>Kategorie</h3>
 						<ul>
 							<li> <a href="index.php?category=oscam&page=oscam-index">O OSCamu</a> </li>
-							<li> <a href="index.php?category=oscam&page=oscam-rsa">RSA a Box klíče</a> </li>
+							<li> <a href="index.php?category=card&page=card-index">Nastavení karet</a> </li>
 							<li> <a href="index.php?category=oscam&page=oscam-todo">OSCam TODO list</a> </li>
 						</ul>   
 					</aside>     
